force-app/main/default/objects/Accommodation__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <description>Line</description>
    <label>Line</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Line</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>Second Line</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Third Line</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>