force-app/main/default/objects/Accommodation__c/fields/Meal__c.field-meta.xml
<CustomField>
    <fullName>Meal__c</fullName>
    <description>Meal</description>
    <label>Meal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation Only</fullName>
                <label>AO</label>
            </value>
            <value>
                <fullName>Bed And Breakfast</fullName>
                <label>BB</label>
            </value>
            <value>
                <fullName>Half Board</fullName>
                <label>HB</label>
            </value>
            <value>
                <fullName>Half Board Plus</fullName>
                <label>HB+</label>
            </value>
            <value>
                <fullName>Full Board</fullName>
                <label>FB</label>
            </value>
            <value>
                <fullName>Full Board Plus</fullName>
                <label>FB+</label>
            </value>
            <value>
                <fullName>All Inclusive</fullName>
                <default>true</default>
                <label>AI</label>
            </value>
            <value>
                <fullName>Ultra All Inclusive</fullName>
                <label>UAI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>