force-app/main/default/objects/Accommodation__c/fields/PhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>PhotoUrl__c</fullName>
    <description>The photo url of accommodation</description>
    <label>Photo Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>