force-app/main/default/objects/Accommodation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <label>SGL</label>
            </value>
            <value>
                <fullName>Double</fullName>
                <default>true</default>
                <label>DBL</label>
            </value>
            <value>
                <fullName>Double + Extra Bed</fullName>
                <label>DBL+EX.BED</label>
            </value>
            <value>
                <fullName>Twin</fullName>
                <label>TWN</label>
            </value>
            <value>
                <fullName>Triple</fullName>
                <label>TRPL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>