force-app/main/default/objects/Accommodation__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <description>View</description>
    <label>View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garden View</fullName>
                <label>GV</label>
            </value>
            <value>
                <fullName>Pool View</fullName>
                <label>PLV</label>
            </value>
            <value>
                <fullName>Sea View</fullName>
                <default>true</default>
                <label>SV</label>
            </value>
            <value>
                <fullName>Side Sea View</fullName>
                <label>SSV</label>
            </value>
            <value>
                <fullName>Ocean View</fullName>
                <label>OV</label>
            </value>
            <value>
                <fullName>Mountain View</fullName>
                <label>MV</label>
            </value>
            <value>
                <fullName>Park View</fullName>
                <label>PV</label>
            </value>
            <value>
                <fullName>Inside View</fullName>
                <label>IV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>