force-app/main/default/objects/Accommodation__c/validationRules/ValidateProtocol.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateProtocol</fullName>
    <active>true</active>
    <errorConditionFormula>
    !BEGINS(PhotoUrl__c, 'https')
    </errorConditionFormula>
    <errorMessage>Pholo url should use https protocol</errorMessage>
</ValidationRule>